--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,1 +1,8 @@
 {% extends 'layout.html' %}
+
+{% block Content %}
+
+This website was created using the Marvel Free online API. 
+Many thanks to Marvel for hosting such an exhaustive database of their characters!
+
+{% endblock Content %}
